# LLVM-sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
ORC/: CMakeLists.txt  CMakePresets.json  README.md  orc_example.cpp
ORC/samples/TUs/: fib.c  fib.ll  main.c  main.ll
ORC/samples/square/: main.c  main.ll
meetings_agenda/: 03-07-2024.md
sandbox/: CMakeLists.txt  hello_llvm.cpp
